# arxiv-context-feed

./: .gitignore  AGENT_COMPOSER_MASTERCLASS.md  README.md  agent_composer.yaml  eval_cross_batch.py  eval_safety_net.py  llms-full.txt  pyproject.toml  requirements.txt  test_ingest_5.py  test_judge_rejections.py
.github/workflows/: backfill.yml  config_from_issue.yml  daily.yml  deploy.yml  weekly_citations.yml  weekly_updates.yml
backfill/: parse_inputs.py
chatbot/: Dockerfile  app.py  config.yaml  generator.py  requirements.txt  reranker.py  retriever.py  whisper_stt.py
chatbot/.chainlit/: config.toml
config/: categories.yaml  judge.yaml  reddit.yaml  sources.yaml  topics.yaml
deploy/: crontab  healthcheck.sh  llama-server.service  setup_oracle.sh
docs/: apps_script_template.gs
eval_results/: config_comparison_20260305_103132.json  config_comparison_20260305_104356.json  opus_ground_truth_20260305_103132.json  safety_net_report_20260305_103132.txt  safety_net_report_20260305_104356.txt
eval_results/cross_batch/: batch_2026-03-05_original100.json  batch_2026-03-10_012039.json  batch_2026-03-10_224123.json  batch_2026-03-10_231816.json  cross_batch_analysis_20260312_011803.json  cross_batch_analysis_20260312_013749.json  cross_batch_analysis_20260312_015059.json
scripts/: download_model.sh  seed_rag_datastore.py
src/contextual_arxiv_feed/: __init__.py  cli.py  config.py  report.py
src/contextual_arxiv_feed/arxiv/: __init__.py  api.py  feeds.py  pdf.py  throttle.py
src/contextual_arxiv_feed/contextual/: __init__.py  contextual_client.py  metadata.py  naming.py
src/contextual_arxiv_feed/judge/: __init__.py  discovery_agent.py  judge.py  llm_judge.py  schema.py
src/contextual_arxiv_feed/keys/: __init__.py  rotator.py
src/contextual_arxiv_feed/llm/: __init__.py  (+1 more)
streamlit_backfill/: app.py
streamlit_backfill/.streamlit/: config.toml
tests/: __init__.py  conftest.py  test_config.py  test_idempotency.py  test_issue_payload.py  test_judge_parsing.py  test_key_rotation.py  test_keyword_matcher.py  test_llm_judge.py  test_llm_server.py  test_manifest.py  test_metadata.py  test_naming.py  test_reddit_poster.py
(+14 files in other folders)
